--- a/package.json
+++ b/package.json
@@ -10,20 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tsparticles/engine": "^3.5.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.5.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.26.1",
     "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.14.1",
-    "regenerator-runtime": "^0.14.1",
-    "tailwind-merge": "^2.5.2"
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
