--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-markdown": "^9.0.1",
     "react-speech-recognition": "^3.10.0",
     "react-spinners": "^0.14.1",
-    "regenerator-runtime": "^0.14.1"
+    "regenerator-runtime": "^0.14.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
